<?xml version="1.0"?>
<package>
  <name>cassie_common_toolbox</name>
  <version>0.0.0</version>
  <description>The cassie_common_toolbox package</description>

  <maintainer email="jreher@caltech.edu">Jenna Reher</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_utilities</build_depend>
  <build_depend>ros_utilities</build_depend>
  <build_depend>control_utilities</build_depend>
  <build_depend>realtime_utilities</build_depend>
  <build_depend>control_eigen_utilities</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_utilities</run_depend>
  <run_depend>ros_utilities</run_depend>
  <run_depend>control_utilities</run_depend>
  <run_depend>realtime_utilities</run_depend>
  <run_depend>control_eigen_utilities</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
